# mlops-cookbook

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  index.md  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-install.sh
.github/workflows/: deploy-gh-pages.yml
about/: index.html
advanced/calling_a_model_api/: index.html
advanced/intro_to_docker/: index.html  intro_to_docker.md
advanced/model_serving/: index.html
advanced/whats_an_api/: index.html
basics/: index.html  index.md
basics/1-connect_to_mlflow/: 1-connect_to_mlflow.ipynb  index.html
basics/2-creating_an_experiment/: 2-creating_an_experiment.ipynb  index.html
basics/3-creating_a_run/: index.html
basics/4-logging_metrics/: 4-logging_metrics.ipynb  index.html
basics/5-logging_artifacts/: 5-logging_artifacts.ipynb  index.html
basics/6-logging_models/: 6-logging_models.ipynb  index.html
basics/7-model_registry/: index.html
basics/8-model_staging/: 8-model_staging.ipynb  index.html
docs/: about.md  index.md  setup.md
docs/advanced/: calling_a_model_api.ipynb  model_serving.md  whats_an_api.md
docs/basics/: 1-connect_to_mlflow.ipynb  2-creating_an_experiment.ipynb  3-creating_a_run.ipynb  4-logging_metrics.ipynb  6-logging_models.ipynb  7-model_registry.ipynb  index.md
docs/exercises/: 1-intro_to_mlflow_I.ipynb  3-intro_to_mlflow_III.ipynb  4-intro_to_mlflow_IV.ipynb  creating_a_docker_image.md  index.md
docs/fundamentals/: index.md  intro_to_api.md  intro_to_git.md  intro_to_poetry.md  intro_to_virtual_environments.md
docs/mlflow/: index.md
docs/mlflow/basics/: 3-creating_a_run.ipynb
docs/project/: git.md  poetry.md
docs/tutorials/: 1-full_model_training.ipynb  basic_model_tracking.ipynb  index.md
exercises/: index.html  index.md
exercises/1-intro_to_mlflow_I/: 1-intro_to_mlflow_I.ipynb  index.html
exercises/2-intro_to_mlflow_II/: 2-intro_to_mlflow_II.ipynb  index.html
exercises/3-intro_to_mlflow_III/: 3-intro_to_mlflow_III.ipynb  index.html
exercises/4-intro_to_mlflow_IV/: 4-intro_to_mlflow_IV.ipynb  index.html
exercises/5-mlflow_for_kaggle_I/: 5-mlflow_for_kaggle_I.ipynb  index.html
exercises/creating_a_docker_image/: index.html
fundamentals/: index.html
fundamentals/intro_to_api/: index.html
fundamentals/intro_to_docker/: index.html  intro_to_docker.md
fundamentals/intro_to_git/: index.html
fundamentals/intro_to_poetry/: index.html
fundamentals/intro_to_virtual_environments/: index.html
mlflow/: index.html
mlflow/deployment/: index.html
mlflow/invocation/: index.html  index.md
mlflow/registry/: index.html
mlops_course/: __init__.py  api.py  front.py  schema.py  settings.py
notebooks/: 1-creating-an-experiment.ipynb  1-creating_an_experiment.ipynb  10-full_model_evaluation.ipynb  2-our_first_run.ipynb  2-training_our_first_model.ipynb  3-evaluating_a_model.ipynb  3-logging_metrics.ipynb  4-logging_artifacts.ipynb  4-serving_a_model.ipynb  5-logging_models.ipynb  6-registering_a_model.ipynb  7-transition_a_model_to_production.ipynb  8-serving_a_model.ipynb  9-full_model_training.ipynb
project/: index.html
project/git/: index.html
project/poetry/: index.html
project/virtual_environments/: index.html  virtual_environments.md
search/: search_index.json
setup/: index.html
tutorials/: index.html
tutorials/1-full_model_training/: index.html
tutorials/2-full_model_evaluation/: 2-full_model_evaluation.ipynb  index.html
tutorials/basic_model_tracking/: index.html
📖-Tutorials/1-creating-an-experiment/: index.html
📖-Tutorials/1-creating_an_experiment/: index.html
📖-Tutorials/10-full_model_evaluation/: index.html
📖-Tutorials/2-our_first_run/: index.html
📖-Tutorials/2-training_our_first_model/: index.html
📖-Tutorials/3-evaluating_a_model/: index.html
📖-Tutorials/3-logging_metrics/: index.html
📖-Tutorials/4-logging_artifacts/: index.html
📖-Tutorials/4-serving_a_model/: index.html
📖-Tutorials/5-logging_models/: index.html
📖-Tutorials/6-registering_a_model/: index.html
📖-Tutorials/7-transition_a_model_to_production/: index.html
📖-Tutorials/8-serving_a_model/: index.html
📖-Tutorials/9-full_model_training/: index.html
(+33 files in other folders)
